--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
 - 2.5.5
 before_install:
-  - gem install bundler
+  - gem install bundler:1.17.3
 install:
   - bundle install
 deploy:
