--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,11 @@ plugins:
   - jekyll-seo-tag
   - jekyll-compose
   - jekyll-redirect-from
-paginate: 10
-paginate_path: "blog/page:num"
+
+pagination:
+  enabled: true
+  per_page: 8
+  permalink: '/blog/page:num/'
 
 markdown: kramdown
 highlighter: rouge
